# lttp-autotimer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
frontend/: package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs  state.rs  write.rs
frontend/src/events/: checks.json  drops.json  events.json  items.json
frontend/src/lib/: styles.css  typedefs.js  util.js
frontend/src/routes/: +page.svelte
lua/: luabridge.lua
postprocess/: best_possible_time.ipynb  best_possible_time.py  estimate_best_time.ipynb  estimate_best_time.py  export_graph.py  graph_testing.py  pre-build.py  pyproject.toml  race_comparison.ipynb  race_comparison.py  run_analyser.ipynb  setup.py
postprocess/postprocess/: function.py
postprocess/src/: function.py  test_function.py
postprocess/test/: test_function.py
src/: actions.json  check.rs  checks.json  commands.json  condition.rs  event.rs  events.json  items.json  lib.rs  main.rs  output.rs  parse_ram.rs  qusb.rs  read.rs  request.rs  serde_lttp.rs  snes.rs  sni.rs  test_macros.rs  tile.rs  tiles.json  time.rs  transition.rs  transitions.json  write.rs
