[package]
name = "lttp-autotimer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
byteorder = "1.4"
cached = "0.26"
chrono = {version = "0.4", features = ["serde"]}
csv = "1.1"
websocket = "0.26"
clap = "3.0.0-beta.5"
colored = "2.0.0"