[package]
name = "lttp-autotimer"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
byteorder = "1.5"
chrono = {version = "0.4", features = ["serde"]}
csv = "1.3"
clap = "3.2.25"
colored = "2.1.0"
termcolor = "1.4"
lazy_static = "1.4"
reqwest = { version="0.11"}
flate2 = "1"
tonic = { version ="0.6", optional = true}
prost = { version = "0.9", optional = true}
tokio = { version = "1.36", optional = true, features = ["full"]}

[build-dependencies]
tonic-build = {version = "0.6", optional = true}

[features]
default = ["sni"]
sni = ["tonic", "prost", "tonic-build", "tokio"]
